--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -100,6 +100,9 @@ ru:
       message: "Ваш результат: %{your_result} из %{max_result}."
       right_result: "Поздравляем, тест успешно завершен!"
       wrong_result: "Можно лучше, попробуйте снова."
+    gist:
+      success: "Gist успешно сохранен!"
+      failure: "Во время сохранения gist произошла ошибка."
 
   tests_mailer:
     completed_test:
