Used Octokit, link to created gist in flash message

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -101,7 +101,7 @@ ru:
       right_result: "Поздравляем, тест успешно завершен!"
       wrong_result: "Можно лучше, попробуйте снова."
     gist:
-      success: "Gist успешно сохранен!"
+      success: "Gist успешно сохранен! Ссылка: "
       failure: "Во время сохранения gist произошла ошибка."
 
   tests_mailer:
