--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,7 +99,7 @@ en:
       right_result: "Congratulation, test was comleted!"
       wrong_result: "Test failed. Try again."
     gist:
-      success: "Gist was successfully created!"
+      success: "Gist was successfully created! Link: "
       failure: "An error occured while saving gist."
 
   tests_mailer:
