Localization command "cancel" of form-inline

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,6 +52,7 @@ en:
     start: "Start test"
     you_sure: "Are you sure?"
     test_list: "Back to list of tests"
+    cancel: "Cancel"
     <<: *show
     <<: *edit
     <<: *destroy
